// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Member Component when \`useFetch\` is awaiting promise to resolve displays \`Loading...\` 1`] = `
<section
  className="loader"
>
  <div
    className="loader-wheel"
  />
  <div
    className="loader-text"
  >
    Loading
  </div>
</section>
`;

exports[`Member Component when \`useFetch\` returns data with 200 status displays data 1`] = `
<section
  className="congress-member"
>
  <a
    href="/congress/house/members"
    onClick={[Function]}
  >
    Back to all members
  </a>
  <h2>
    first
     
    last
  </h2>
  <div
    className="headshot"
  >
    <img
      alt="Professional headshot of first last"
      onError={[Function]}
      src="https://www.congress.gov/img/member/1.jpg"
    />
  </div>
  <section
    className="congress-member-links"
  >
    <a
      href="www.example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Website
    </a>
    <a
      href="https://twitter.com/twitter"
      rel="noopener noreferrer"
      target="_blank"
    >
      Twitter
    </a>
  </section>
  <hr />
  <article
    className="information"
  >
    <section>
      <ul>
        <li>
          <label>
            Most recent vote:
          </label>
           
          2020-01-01
        </li>
        <li>
          <label>
            Date of Birth:
          </label>
           
          1900-01-01
           (age: 
          1
          )
        </li>
        <li>
          <label>
            Gender:
          </label>
           
          F
        </li>
        <li>
          <label>
            Current Party:
          </label>
           
          Democrat
        </li>
        <li>
          <label>
            State Representing:
          </label>
           
          IL
        </li>
        <li>
          <label>
            Will be up for re-election in:
          </label>
           
          2020
        </li>
        <li>
          <p>
            Has served 
            <em>
              1
            </em>
             terms starting initially elected into office in 
            <em>
              2000-01-01
            </em>
          </p>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Career Voting History
      </h3>
      <ul>
        <li>
          <label>
            Total Votes Eligible:
          </label>
           
          1
        </li>
        <li>
          <label>
            Total Cast Votes:
          </label>
           
          2
        </li>
        <li>
          <label>
            Total Missed Votes:
          </label>
           
          3
        </li>
        <li>
          <label>
            Total Present Votes:
          </label>
           
          4
        </li>
        <li>
          <label>
            Total Votes With 
            Democrat
             Party:
          </label>
           
          5
          *
        </li>
        <li>
          <label>
            Total Votes Against 
            Democrat
             Party:
          </label>
           
          6
          *
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Individual Term Voting Statistics
      </h3>
      <ul
        className="term-info"
      >
        <li>
          <label>
            Congressional Session:
          </label>
           
          116
           - From
           
          2019-01-03
           until 
          2021-01-03
        </li>
        <li>
          <label>
            Cast Votes:
          </label>
           
          1
        </li>
        <li>
          <label>
            Votes With 
            Democrat
             Party:
          </label>
           
          2
          *
        </li>
        <li>
          <label>
            Votes Against 
            Democrat
             Party:
          </label>
           
          3
          *
        </li>
      </ul>
    </section>
    <footer
      className="footnote"
    >
      * - counts relating to votes with or against party might be off due to rounding precision or insufficient historical data provided
    </footer>
  </article>
</section>
`;

exports[`Member Component when \`useFetch\` returns data with 200 status displays misconduct info if present 1`] = `
<section
  className="congress-member"
>
  <a
    href="/congress/house/members"
    onClick={[Function]}
  >
    Back to all members
  </a>
  <h2>
    first
     
    last
  </h2>
  <div
    className="headshot"
  >
    <img
      alt="Professional headshot of first last"
      onError={[Function]}
      src="https://www.congress.gov/img/member/1.jpg"
    />
  </div>
  <section
    className="congress-member-links"
  >
    <a
      href="www.example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Website
    </a>
    <a
      href="https://twitter.com/twitter"
      rel="noopener noreferrer"
      target="_blank"
    >
      Twitter
    </a>
  </section>
  <hr />
  <article
    className="information"
  >
    <section>
      <ul>
        <li>
          <label>
            Most recent vote:
          </label>
           
          2020-01-01
        </li>
        <li>
          <label>
            Date of Birth:
          </label>
           
          1900-01-01
           (age: 
          1
          )
        </li>
        <li>
          <label>
            Gender:
          </label>
           
          F
        </li>
        <li>
          <label>
            Current Party:
          </label>
           
          Democrat
        </li>
        <li>
          <label>
            State Representing:
          </label>
           
          IL
        </li>
        <li>
          <label>
            Will be up for re-election in:
          </label>
           
          2020
        </li>
        <li>
          <p>
            Has served 
            <em>
              1
            </em>
             terms starting initially elected into office in 
            <em>
              2000-01-01
            </em>
          </p>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Official Misconduct Reports
      </h3>
      <h4>
        Data provided by
         
        <a
          href="https://github.com/govtrack/misconduct"
          rel="noopener noreferrer"
          target="_blank"
        >
          GovTrack Congressional Misconduct DB
        </a>
      </h4>
      <ul>
        <li>
          <label>
            Allegation:
          </label>
           
          Allegation text
        </li>
        <li>
          <label>
            Initiated on:
          </label>
           
          2020-01-01
        </li>
        <li>
          <label>
            Allegation Categories:
          </label>
           
          corruption, elections
        </li>
        <li>
          <label>
            Current Status:
          </label>
           
          Unresolved
        </li>
        <li>
          <p>
            text in 
            <a
              href="#markdown"
            >
              markdown
            </a>
          </p>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Career Voting History
      </h3>
      <ul>
        <li>
          <label>
            Total Votes Eligible:
          </label>
           
          1
        </li>
        <li>
          <label>
            Total Cast Votes:
          </label>
           
          2
        </li>
        <li>
          <label>
            Total Missed Votes:
          </label>
           
          3
        </li>
        <li>
          <label>
            Total Present Votes:
          </label>
           
          4
        </li>
        <li>
          <label>
            Total Votes With 
            Democrat
             Party:
          </label>
           
          5
          *
        </li>
        <li>
          <label>
            Total Votes Against 
            Democrat
             Party:
          </label>
           
          6
          *
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Individual Term Voting Statistics
      </h3>
      <ul
        className="term-info"
      >
        <li>
          <label>
            Congressional Session:
          </label>
           
          116
           - From
           
          2019-01-03
           until 
          2021-01-03
        </li>
        <li>
          <label>
            Cast Votes:
          </label>
           
          1
        </li>
        <li>
          <label>
            Votes With 
            Democrat
             Party:
          </label>
           
          2
          *
        </li>
        <li>
          <label>
            Votes Against 
            Democrat
             Party:
          </label>
           
          3
          *
        </li>
      </ul>
    </section>
    <footer
      className="footnote"
    >
      * - counts relating to votes with or against party might be off due to rounding precision or insufficient historical data provided
    </footer>
  </article>
</section>
`;

exports[`Member Component when \`useFetch\` returns data with 200 status displays term party if different from current party 1`] = `
<section
  className="congress-member"
>
  <a
    href="/congress/house/members"
    onClick={[Function]}
  >
    Back to all members
  </a>
  <h2>
    first
     
    last
  </h2>
  <div
    className="headshot"
  >
    <img
      alt="Professional headshot of first last"
      onError={[Function]}
      src="https://www.congress.gov/img/member/1.jpg"
    />
  </div>
  <section
    className="congress-member-links"
  >
    <a
      href="www.example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Website
    </a>
    <a
      href="https://twitter.com/twitter"
      rel="noopener noreferrer"
      target="_blank"
    >
      Twitter
    </a>
  </section>
  <hr />
  <article
    className="information"
  >
    <section>
      <ul>
        <li>
          <label>
            Most recent vote:
          </label>
           
          2020-01-01
        </li>
        <li>
          <label>
            Date of Birth:
          </label>
           
          1900-01-01
           (age: 
          1
          )
        </li>
        <li>
          <label>
            Gender:
          </label>
           
          F
        </li>
        <li>
          <label>
            Current Party:
          </label>
           
          Democrat
        </li>
        <li>
          <label>
            State Representing:
          </label>
           
          IL
        </li>
        <li>
          <label>
            Will be up for re-election in:
          </label>
           
          2020
        </li>
        <li>
          <p>
            Has served 
            <em>
              1
            </em>
             terms starting initially elected into office in 
            <em>
              2000-01-01
            </em>
          </p>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Career Voting History
      </h3>
      <ul>
        <li>
          <label>
            Total Votes Eligible:
          </label>
           
          1
        </li>
        <li>
          <label>
            Total Cast Votes:
          </label>
           
          2
        </li>
        <li>
          <label>
            Total Missed Votes:
          </label>
           
          3
        </li>
        <li>
          <label>
            Total Present Votes:
          </label>
           
          4
        </li>
        <li>
          <label>
            Total Votes With 
            Democrat
             Party:
          </label>
           
          5
          *
        </li>
        <li>
          <label>
            Total Votes Against 
            Democrat
             Party:
          </label>
           
          6
          *
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Individual Term Voting Statistics
      </h3>
      <ul
        className="term-info"
      >
        <li>
          <label>
            Congressional Session:
          </label>
           
          116
           - From
           
          2019-01-03
           until 
          2021-01-03
        </li>
        <li>
          <label>
            Cast Votes:
          </label>
           
          1
        </li>
        <li>
          <label>
            Votes With 
            Democrat
             Party:
          </label>
           
          2
          *
        </li>
        <li>
          <label>
            Votes Against 
            Democrat
             Party:
          </label>
           
          3
          *
        </li>
      </ul>
      <ul
        className="term-info"
      >
        <li>
          <label>
            Congressional Session:
          </label>
           
          115
           - From
           
          2017-01-03
           until 
          2019-01-03
        </li>
        <li>
          <label>
            Party:
          </label>
           
          Republican
        </li>
        <li>
          <label>
            Cast Votes:
          </label>
           
          1
        </li>
        <li>
          <label>
            Votes With 
            Republican
             Party:
          </label>
           
          2
          *
        </li>
        <li>
          <label>
            Votes Against 
            Republican
             Party:
          </label>
           
          3
          *
        </li>
      </ul>
    </section>
    <footer
      className="footnote"
    >
      * - counts relating to votes with or against party might be off due to rounding precision or insufficient historical data provided
    </footer>
  </article>
</section>
`;

exports[`Member Component when \`useFetch\` returns data with 404 status displays \`Not Found\` 1`] = `
<h1>
  Not Found
</h1>
`;

exports[`Member Component when \`useFetch\` returns data with 500 status displays error message 1`] = `
<section>
  <h3>
    Whoops! There was a problem loading
     
    Congress Memeber data.
  </h3>
  <p>
    Please reload browser to try again in a little bit.
  </p>
</section>
`;
